kubernetes/apps/kyverno/kyverno-policies/manifests/dns-config.yaml
---
# yaml-language-server: $schema=https://kubernetes-schemas-9iu.pages.dev/kyverno.io/clusterpolicy_v2beta1.json
apiVersion: kyverno.io/v1
kind: ClusterPolicy
metadata:
  name: add-ndots
spec:
  rules:
    - name: add-ndots
      match:
        any:
          - resources:
              kinds:
                - Pod
      mutate:
        patchStrategicMerge:
          spec:
            dnsConfig:
              options:
                - name: ndots
                  value: "1"
