kubernetes/apps/kyverno/kyverno-policies/manifests/mount-internal-ca.yaml
---
# yaml-language-server: $schema=https://kubernetes-schemas-9iu.pages.dev/kyverno.io/clusterpolicy_v2beta1.json
apiVersion: kyverno.io/v2beta1
kind: ClusterPolicy
metadata:
  name: mount-internal-ca
spec:
  rules:
    - name: mount-internal-ca
      match:
        all:
          - resources:
              kinds:
                - Pod
              annotations:
                security.darkfellanetwork.com/mount-internal-ca: "true"
      mutate:
        patchStrategicMerge:
          spec:
            volumes:
              - name: internal-ca
                secret:
                  secretName: internal-ca-secret
            initContainers:
              - (name): "*"
                volumeMounts:
                  - name: internal-ca
                    mountPath: /etc/ssl/certs/internal-ca.crt
                    subPath: ca.crt
                    readOnly: true
            containers:
              - (name): "*"
                volumeMounts:
                  - name: internal-ca
                    mountPath: /etc/ssl/certs/internal-ca.crt
                    subPath: ca.crt
                    readOnly: true
---
# yaml-language-server: $schema=https://kubernetes-schemas-9iu.pages.dev/kyverno.io/clusterpolicy_v2beta1.json
apiVersion: kyverno.io/v2beta1
kind: ClusterPolicy
metadata:
  name: mount-postgres-ca
spec:
  rules:
    - name: mount-postgres-ca
      match:
        all:
          - resources:
              kinds:
                - Pod
              annotations:
                security.darkfellanetwork.com/mount-postgres-ca: "true"
      mutate:
        patchStrategicMerge:
          spec:
            volumes:
              - name: postgres-ca
                secret:
                  secretName: postgres-ca-secret
            initContainers:
              - (name): "*"
                volumeMounts:
                  - name: postgres-ca
                    mountPath: /etc/ssl/certs/postgres-ca.crt
                    subPath: ca.crt
                    readOnly: true
            containers:
              - (name): "*"
                volumeMounts:
                  - name: postgres-ca
                    mountPath: /etc/ssl/certs/postgres-ca.crt
                    subPath: ca.crt
                    readOnly: true
