kubernetes/apps/kyverno/kyverno-policies/manifests/verify-images.yaml
---
{
  apiVersion: "kyverno.io/v1",
  kind: "ClusterPolicy",
  metadata: {
    name: "verify-images",
  },
  spec: {
    webhookConfiguration: {
      failurePolicy: "Fail",
      timeoutSeconds: 30,
    },
    background: true,
    rules: [{
      name: "verify-cosign-signature",
      match: {
        any: [{
          resources: {
            kinds: [
              "Pod",
            ],
          },
        }],
      },
      verifyImages: [{
        imageReferences: [
          "ghcr.io/fluxcd/source-controller*",
          "ghcr.io/fluxcd/kustomize-controller*",
          "ghcr.io/fluxcd/helm-controller*",
          "ghcr.io/fluxcd/notification-controller*",
        ],
        failureAction: "Enforce",
        type: "Cosign",
        attestors: [{
          entries: [{
            keyless: {
              subject: "https://github.com/fluxcd/*",
              issuer: "https://token.actions.githubusercontent.com",
              rekor: {
                url: "https://rekor.sigstore.dev",
              },
            },
          }],
        }],
      }, {
        imageReferences: [
          "ghcr.io/controlplaneio-fluxcd/flux-operator*",
        ],
        failureAction: "Enforce",
        type: "SigstoreBundle",
        attestors: [{
          entries: [{
            keyless: {
              subject: "https://github.com/controlplaneio-fluxcd/flux-operator/*",
              issuer: "https://token.actions.githubusercontent.com",
              rekor: {
                url: "https://rekor.sigstore.dev",
              },
            },
          }],
        }],
      }],
    }],
  },
}
